# smart-travel-planner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .structureignore  CLAUDE.md  README.md  docker-compose.yml  structure.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  lifespan.py  logging_setup.py  main.py  retries.py  tracing.py
backend/app/agents/: __init__.py  graph.py  model_router.py  state.py
backend/app/db/: session.py
backend/app/evaluation/: rag_eval_cases.py
backend/app/models/: db.py
backend/app/prompts/: __init__.py  agent.py  safety.py  synthesis.py
backend/app/routers/: chat.py  classifier.py  history.py  rag.py  traces.py  weather.py  webhook.py
backend/app/schemas/: agent.py  agent_tools.py  auth.py  classifier.py  rag.py  traces.py  weather.py  webhook.py
backend/app/services/: agent_service.py  classifier_service.py  destination_coordinates.py  (+4 more)
backend/ml/: README.md  train_classifier.py
backend/models/: final_travel_style_pipeline.joblib
backend/notebooks/: Travel_transform.ipynb  travel_cleaned_labeled.ipynb
backend/scripts/: fetch_wikivoyage_raw.py  ingest_rag_documents.py
backend/tests/: conftest.py  test_agent_graph.py  test_agent_persistence.py  test_agent_schemas.py  test_agent_tools.py  test_auth.py  test_chat.py  test_classifier.py  test_destination_profiles.py  test_health.py  test_langsmith_tracing.py  test_model_router.py  test_paths.py  test_rag_endpoints.py  test_rag_service.py  test_traces.py  test_weather.py  test_webhook.py
(+66 files in other folders)
