[project]
name = "smart-travel-planner-backend"
version = "0.1.0"
description = "Smart Travel Planner backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "cachetools>=5.3.0",
    "structlog>=24.0.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.34.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt[crypto]>=2.8.0",
    "pillow>=12.2.0",
    "matplotlib==3.9.2",
    "pandas==2.2.3",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["app.schemas.*", "app.tools.*"]
strict = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "joblib.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
